# Lab8HTTPServer

./: CMakeLists.txt  Doxyfile  README.md  main.cpp  server.cpp
include/: languages.h  server.h
src/: languages.cpp
